rsrc/css/world-client.css
/* ... */
.unselectedRoomTab, .attentionRoomTab, .unselectedTellTab, .attentionTellTab, .unselectedGroupTab,
    .attentionGroupTab {
  fontFamily: Arial;
  fontWeight: bold;
  closeSkin: Embed(source="../media/skins/tab/close_small.png");
  color: #8bbcdc;
}

.selectedRoomTab, .selectedTellTab, .selectedGroupTab {
  color: #0c61a8;
  fontFamily: Arial;
  fontWeight: bold;
  closeSkin: Embed(source="../media/skins/tab/close_small.png");
}

.controlBar, .headerBar { 
  horizontalGap: 0;
  verticalGap: 0;
  borderStyle: "none";
  paddingBottom: 0;
  paddingTop: 0;
  paddingRight: 0;
}

.buttonPalette {
  paddingBottom: 5;
  paddingTop: 5;
  paddingLeft: 5;
  paddingRight: 5;
  horizontalGap: 8;
  verticalGap: 8;
  verticalAlign: "middle";
  horizontalAlign: "center";
  backgroundColor: white;
  backgroundAlphaClosed: 0;
  backgroundAlphaOpen: .85;
}

/* Normally our floating panels have 10px of border, but if they don't you might
   want to set _buttonBar.styleName = "buttonPadding"; */
.buttonPadding {
  paddingBottom: 10;
  paddingTop: 10;
  paddingLeft: 10;
  paddingRight: 10;
  horizontalAlign: "right";
}

.currencyLabel {
  color: white;
  fontSize: 12;
  fontWeight: "bold";
}

.controlBar {
  backgroundImage: Embed(source="../media/skins/controlbar/bg.png");
  backgroundSize: "100%";
  horizontalGap: 10;
  verticalAlign: "bottom";
  paddingLeft: 8;
  paddingBottom: 1;
}

/** All these buttons use the ImageButtonSkin and need the per-state skins cleared out. */
.imageButton,
.controlBarButtonGo, .controlBarButtonRoom, .controlBarButtonChat,
.controlBarButtonInstructions, .controlBarButtonShare, .controlBarButtonScores,
.controlBarHoverZone, .controlBarFriendButton, .controlBarTalkButton,
.controlBarIdleButton, .controlBarScaleButton, .controlBarGameButton, .tickButton,
.controlBarButtonVolume0, .controlBarButtonVolume1, .controlBarButtonVolume2,
.controlBarButtonVolume3, .controlBarButtonVolume4, .controlBarHomePageGridButton,
.controlBarPartyButton, .controlBarConfig, .notificationToggle,
.headerBarBack,
.joinNowButton, .logonButton, .tourNext, .trophyFeedTrophy,
.closeButton {

  /** clear out the CheckBox foreground icons too */
  icon: ClassReference(null);
  upIcon: ClassReference(null);
  overIcon: ClassReference(null);
  downIcon: ClassReference(null);
  disabledIcon: ClassReference(null);
  selectedUpIcon: ClassReference(null);
  selectedOverIcon: ClassReference(null);
  selectedDownIcon: ClassReference(null);
  selectedDisabledIcon: ClassReference(null);

  upSkin: ClassReference(null);
  downSkin: ClassReference(null);
  overSkin: ClassReference(null);
  disabledSkin: ClassReference(null);
  selectedUpSkin: ClassReference(null);
  selectedOverSkin: ClassReference(null);
  selectedDownSkin: ClassReference(null);
  selectedDisabledSkin: ClassReference(null);
  skin: ClassReference("com.threerings.msoy.ui.ImageButtonSkin");
}

.controlBarButtonChat {
  image: Embed(source="../media/skins/controlbar/chatoptions.png");
}

.controlBarButtonGo {
  image: Embed(source="../media/skins/controlbar/go.png");
}

.controlBarButtonRoom {
  image: Embed(source="../media/skins/controlbar/room.png");
}

.controlBarConfig {
  image: Embed(source="../media/skins/controlbar/config.png");
}

.controlBarButtonInstructions {
  image: Embed(source="../media/skins/controlbar/instructions.png");
}

.controlBarButtonShare {
  image: Embed(source="../media/skins/controlbar/share.png");
}

.controlBarButtonScores {
  image: Embed(source="../media/skins/controlbar/score.png");
}

.controlBarHoverZone {
  image: Embed(source="../media/skins/controlbar/clickable.png");
}

.controlBarFriendButton {
  image: Embed(source="../media/skins/controlbar/friends.png");
}

.controlBarTalkButton {
  image: Embed(source="../media/skins/controlbar/talk.png");
}

.controlBarIdleButton {
  image: Embed(source="../media/skins/controlbar/idle.png");
}

.controlBarScaleButton {
  image: Embed(source="../media/skins/controlbar/scale.png");
}

.controlBarGameButton {
  image: Embed(source="../media/skins/controlbar/instructions.png");
}

.controlBarHomePageGridButton {
  image: Embed(source="../media/skins/controlbar/grid.png");
}

.controlBarPartyButton {
  image: Embed(source="../media/skins/controlbar/party.png");
  highlightAlpha: .5;
}

.headerBarBack {
  image: Embed(source="../media/skins/headerbar/back.png");
}

.tickButton {
  image: Embed(source="../media/skins/controlbar/tick.png");
}

.notificationToggle {
  image: Embed(source="../media/skins/controlbar/notifications.png");
}

.tourNext {
  image: url("/images/rooms/tour_next.png");
}

.attentionLabel {
  fontWeight: "bold";
  color: red;
}

.sliderPopup {
  backgroundSkin: Embed(source="../media/skins/controlbar/slider_background.png",
          scaleGridTop="1", scaleGridBottom="23",
          scaleGridLeft="1", scaleGridRight="31");
  backgroundSize: "100%";
  dropShadowEnabled: "true";
}

.volumeSlider {
  showTrackHighlight: true;
}

.avatarCellSelected { 
  backgroundColor: #54a9da;
}

.chatControl {  
  paddingLeft: 0;
  paddingRight: 0;
  paddingTop: 0;
  paddingBottom: 2;
  verticalAlign: "center";
  backgroundAlpha: 0;
}

ChatInput {
  color: #000000;
  themeColor: #3db8eb;
  fontFamily: "Arial";
  fontSize: 12;
  borderStyle: "solid";
  borderThickness: 1px;
  borderColor: #309dc1;
  prompt: Embed(source="../media/skins/controlbar/typetochat.png");
}

.chatTargetButton {
    borderColor: #000000;
    fontWeight: "bold";
    fillAlphas: 1, 1;
    fillColors: #E6EEEE, #FFFFFF;
}

.headerBar {
  paddingLeft: 0;
  backgroundImage: Embed(source="../media/skins/headerbar/bg.png");
  backgroundSize: "100%";
}

.closeButton {
  height: 13px;
  width: 13px;
  image: Embed(source="../../pages/images/ui/client_close_default.png");
}
/* ... */

